# SM_SEDA

encoder_bridge/: package.xml  setup.py
encoder_bridge/encoder_bridge/: encoder_angle_hex_node.py
encoder_bridge/install/: local_setup.sh  setup.sh
encoder_bridge/install/encoder_bridge/lib/encoder_bridge/: encoder_angle_hex_node
encoder_bridge/install/encoder_bridge/share/encoder_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
encoder_bridge/log/: latest_build
seda_controller/: CMakeLists.txt  package.xml
seda_controller/bag/: csv_reader.m  seda_log.csv
seda_controller/config/: config.yaml
seda_controller/launch/: seda_system.launch.py
seda_controller/src/: seda_controller.cpp  seda_dynamixel.cpp
